<resources>
    <string name="app_name">CompraFacil</string>
    <string name="search_hint">Buscar productos</string>
    <string name="precioProducto">12.00</string>
    <string name="nombreProducto">nombrePrueba</string>
    <string name="tiendaProducto">tiendaPrueba</string>
    <string name="tiendaNombre">tiendaNombre</string>

    -- String for Login
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="title_activity_maps">Map</string>

    -- String for products
    <string name="cod_prod">Codigo Producto</string>
    <string name="nom_prod">Nombre Producto</string>
    <string name="desc_prod">Descripcion Producto</string>
    <string name="marc_prod">Marca Producto</string>
    <string name="cont_prod">Contenido Producto</string>
    <string name="prec_prod">Precio Producto</string>
    <string name="stk_prod">Stock Producto</string>

    -- Botones
    <string name="btn_CrearProducto">Crear Producto</string>

</resources>