<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_margin="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgItemProducto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altoImg"
            android:src="@drawable/ic_launcher_foreground"/>
        <TextView
            android:id="@+id/txtNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreProducto"
            android:textSize="@dimen/fontNombre"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/txtPrecioProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precioProducto"
            android:textSize="@dimen/fontPrecio"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/txtTiendaProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiendaProducto"
            android:textSize="@dimen/fontPrecio"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>