<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Toolbar
            android:id="@+id/toolbarProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgDetalleItemProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:scaleType="centerInside"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="50dp"/><!--android:src="@drawable/producto_prueba"-->
                <TextView
                    android:id="@+id/txtDetalleNombrePRoducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreProducto"
                    android:textSize="@dimen/fontNombre"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/txtDetallePrecioProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontPrecio"
                    android:text="@string/precioProducto"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/txtDetalleTiendaProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tiendaProducto"
                    android:gravity="center_horizontal"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="100dp"
                        android:layout_height="@dimen/toolbarAlto"
                        android:hint="Cantidad"
                        android:gravity="center"/>

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agregar"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>